reviewsController and reviewsRoutes added.
